--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
   <head>
     <title>WatchOut! - by Hao</title>
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
   </head>
   <body>
+  	<div class="container">
+  		<h1>Game Title</h1>
+  		<h3>Instruction</h3>
+  		<div id="scores">
+  			<h3>High Score: <span id="best-score">xxx</span></h3>
+  			<h3>Current Score: <span id="current-score">yyy</span></h3>
+  		</dive>
+  	</div>
     <script src="watchout.js"></script>
   </body>
 </html>
