--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
   <head>
     <title>WatchOut! - by Hao</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.3.1/underscore-min.js"></script>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" ></script>
   </head>
   <body>
   	<div class="container">
@@ -13,6 +15,7 @@
   			<h3>Current Score: <span id="current-score">yyy</span></h3>
   		</dive>
   	</div>
+    <script src="svg/ninja.js"></script>
     <script src="watchout.js"></script>
   </body>
 </html>
