collider game finished basic requirement

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   </head>
   <body>
   	<div class="container">
-  		<h1>Game Title</h1>
-  		<h3>Instruction</h3>
+  		<h1>Don't Get Hit!</h1>
+  		<p>Instruction: Tag teardrop once to activate the player to follow your curser. click on enemy cluster to start the game. don't get hit!</p>
   		<div id="scores">
-  			<h3>High Score: <span id="best-score">xxx</span></h3>
-  			<h3>Current Score: <span id="current-score">yyy</span></h3>
+  			<h3>High Score: <span id="best-score">000</span></h3>
+  			<h3>Current Score: <span id="current-score">000</span></h3>
   		</dive>
   	</div>
-    <script src="svg/ninja.js"></script>
+    <script src="svg/elvis.js"></script>
     <script src="watchout.js"></script>
   </body>
 </html>
